m- fixed issue with z-index of links

--- a/resources/style.css
+++ b/resources/style.css
@@ -141,7 +141,6 @@ h2 {
     padding-left: 1.1em;
     padding-right: 1.1em;
     margin-top: 5%;
-    z-index: 100;
 }
 
 .H2-headers {
@@ -167,7 +166,6 @@ h2 {
     padding-right: 1.1em;
     position: relative;
     top: -1%;
-    z-index: 100;
 }
 
 nav {
